--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@apollo/server": "^4.9.3",
     "@graphql-tools/schema": "^10.0.0",
     "apollo-server-express": "^3.12.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.0",
@@ -33,6 +35,9 @@
     "ws": "^8.14.1"
   },
   "devDependencies": {
+    "eslint": "^8.49.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.1",
     "nodemon": "^3.0.1"
   }
 }
