--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "scheduler:start:dev": "nodemon schedulers/init.js"
   },
   "repository": {
     "type": "git",
@@ -23,8 +24,10 @@
     "@apollo/server": "^4.9.3",
     "@graphql-tools/schema": "^10.0.0",
     "apollo-server-express": "^3.12.1",
+    "axios": "^1.5.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "cron": "^3.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.0",
