--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "apollo-server-express": "^3.12.1",
     "axios": "^1.5.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cron": "^3.0.0",
     "dotenv": "^16.3.1",
@@ -33,6 +34,7 @@
     "graphql": "^16.8.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.14.0",
+    "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.3",
     "mongoose": "^7.5.2",
     "ws": "^8.14.1"
